--- a/lemonade.gui/pom.xml
+++ b/lemonade.gui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.ndextools</groupId>
         <artifactId>lemonade</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.X-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
