--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,33 @@
     <groupId>org.ndextools</groupId>
     <artifactId>lemonade</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.X-SNAPSHOT</version>
 
     <modules>
         <module>lemonade.gui</module>
     </modules>
+
+    <name>NDEx Lemonade</name>
+    <description>Redesign of MorphCX to run as a multi-module Java application supporting both GUI and CLI front ends.</description>
+    <url>https://github.com/ndextools/ndex-lemonade</url>
+
+    <issueManagement>
+        <url>https://github.com/ndextools/ndex-lemonade/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/ndextools/ndex-lemonade</url>
+        <connection>scm:git:git://github.com/ndextools/ndex-lemonade.git</connection>
+        <developerConnection>scm:git:git@github.com:ndextools/ndex-lemonade.git</developerConnection>
+    </scm>
 
 </project>
